<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ccc"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textColorHint="#000"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLogin"
            android:layout_centerHorizontal="true"
            android:textColorHint="#000"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnZaloguj"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/zaloguj"
            style="@style/Button" />

        <TextView
            android:id="@+id/tvZarejestruj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnZaloguj"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/new_account"
            android:textColor="#000"
            android:textAppearance="?android:attr/textAppearanceSmall" />


    </RelativeLayout>
</ScrollView>