<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ccc"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/etLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textColorHint="#000"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLog"
            android:layout_centerHorizontal="true"
            android:textColorHint="#000"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnZarejestruj"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/zarejestruj"
            style="@style/Button"
            android:layout_below="@+id/etPw2"
            android:layout_centerHorizontal="true" />


        <EditText
            android:id="@+id/etPw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_password"
            android:textColorHint="#000"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_below="@+id/etPw"
            android:layout_alignLeft="@+id/etPw"
            android:layout_alignStart="@+id/etPw" />

    </RelativeLayout>
</ScrollView>